@@ -125,41 +125,41 @@ class NatourCmd < Clamp::Command
   end
 end
 
-config = Natour::Config.load_file(
-  '.natour.yml',
-  default: {
-    report: {
-      create: {
-        out_dir: nil,
-        out_file: nil,
-        overwrite: false,
-        track_formats: %i[gpx fit],
-        map: true,
-        map_layers: [],
-        adoc_author: nil
-      },
-      convert: {
-        out_dir: nil,
-        out_file: nil,
-        overwrite: false,
-        backend: :pdf,
-        draft: false,
-        draft_backend: nil,
-        image_maxdim: 1800
-      }
+config = Natour::Config.load_files([
+  Pathname(Dir.home).join('.natour.yml'),
+  Pathname(Dir.pwd).join('.natour.yml')
+], default: {
+  report: {
+    create: {
+      out_dir: nil,
+      out_file: nil,
+      overwrite: false,
+      track_formats: %i[gpx fit],
+      map: true,
+      map_layers: [],
+      adoc_author: nil
     },
-    map: {
-      create: {
-        out_dir: nil,
-        out_file: nil,
-        overwrite: false,
-        gps_colors: [],
-        map_layers: [],
-        image_size: [1200, 900]
-      }
+    convert: {
+      out_dir: nil,
+      out_file: nil,
+      overwrite: false,
+      backend: :pdf,
+      draft: false,
+      draft_backend: nil,
+      image_maxdim: 1800
+    }
+  },
+  map: {
+    create: {
+      out_dir: nil,
+      out_file: nil,
+      overwrite: false,
+      gps_colors: [],
+      map_layers: [],
+      image_size: [1200, 900]
     }
   }
-)
+})
 
 NatourCmd.run(
   Pathname($PROGRAM_NAME).basename,
