@@ -4,12 +4,9 @@ require 'yaml'
 
 module Natour
   class Config
-    def self.load_file(filename, default: {}, dirs: [Dir.home, Dir.pwd])
-      configs = dirs.map do |dir|
-        config = YAML.safe_load(
-          File.read(Pathname(dir).join(filename)),
-          permitted_classes: [Symbol]
-        )
+    def self.load_files(filenames, default: {})
+      configs = filenames.map do |filename|
+        config = YAML.safe_load(File.read(filename), permitted_classes: [Symbol])
         config || {}
       rescue Errno::ENOENT
         {}
